Fixed missing padding on ProductDetail

--- a/src/ProductDetail.scss
+++ b/src/ProductDetail.scss
@@ -33,12 +33,13 @@
         border-top: 1px solid var(--color-grey-light);
         display: flex;
         flex-direction: column;
+        padding: 0 0 .5rem .5rem;
 
         @include respond(tabland) {
             border-top: 0;
-            padding: .5rem .5rem;
+            padding: .5rem;
             height: 18rem;
-            margin: .5rem .5rem;
+            margin: .5rem;
             height: 19rem;
             justify-content: center;
         }
